--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
-    "url": "YOUR APP URL", 
-    "name": "MaxiTap Airdrop",                   
-    "iconUrl": "YOUR APP URL/loader.webp",          
+    "url": "https://teal-bavarois-241cb0.netlify.app", 
+    "name": "Bitcat Airdrop",                   
+    "iconUrl": "https://teal-bavarois-241cb0.netlify.app/loader.webp",          
     "termsOfUseUrl": "",  
     "privacyPolicyUrl": "" 
 }
